# hoyoverse-api

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/: FUNDING.yml
config/: example.config.yaml
scripts/: test_calendar.rs  test_notifier.rs  test_parser.rs  test_redemption.rs  validate_codes.rs  validate_codes.sh
src/: config.rs  error.rs  global.rs  lib.rs  main.rs  scheduler.rs  types.rs  util.rs
src/crons/: genshin.rs  honkai.rs  mod.rs  starrail.rs  themis.rs  zenless.rs
src/database/: mod.rs  redemption_code.rs
src/db/: mod.rs  mongo.rs  redis.rs
src/games/: genshin.rs  mod.rs  starrail.rs  themis.rs  zenless.rs
src/http/: error.rs  mod.rs
src/http/routes/: calendar.rs  codes.rs  mod.rs  news.rs
src/http/routes/calendar/: genshin.rs  mod.rs  starrail.rs  zenless.rs
src/mutex/: mod.rs  mutex.lua
src/notifier/: discord.rs
src/ratelimit/: limit.lua  mod.rs
src/resolvers/: mod.rs
src/resolvers/genshin/: calendar.rs  mod.rs
src/resolvers/genshin/codes/: mod.rs  tests.rs
src/resolvers/genshin/codes/sources/: fandom.rs  game8.rs  hoyolab.rs  mod.rs
src/resolvers/genshin/news/: mod.rs
src/resolvers/genshin/news/sources/: hoyolab.rs  mod.rs
src/resolvers/honkai/: mod.rs
src/resolvers/honkai/codes/: mod.rs  tests.rs
src/resolvers/honkai/codes/sources/: fandom.rs  mod.rs
src/resolvers/honkai/news/sources/: hoyolab.rs  mod.rs
src/resolvers/starrail/: calendar.rs  mod.rs
src/resolvers/starrail/codes/: mod.rs  tests.rs
src/resolvers/starrail/codes/sources/: eurogamer.rs  fandom.rs  game8.rs  hoyolab.rs  mod.rs  pcgamer.rs  prydwen.rs
src/resolvers/starrail/news/: mod.rs
src/resolvers/starrail/news/sources/: hoyolab.rs  mod.rs
src/resolvers/themis/: mod.rs
src/resolvers/themis/codes/: mod.rs  tests.rs
src/resolvers/themis/codes/sources/: mod.rs  totwiki.rs
src/resolvers/themis/news/sources/: hoyolab.rs
src/resolvers/zenless/: mod.rs
src/resolvers/zenless/codes/: mod.rs  tests.rs
src/resolvers/zenless/codes/sources/: dudcode.rs  game8.rs  gamerant.rs  hoyolab.rs  mod.rs  pcgamesn.rs  zzzgg.rs
src/resolvers/zenless/news/: mod.rs
src/resolvers/zenless/news/sources/: hoyolab.rs
src/routes/: genshin.rs  honkai.rs  mod.rs  starrail.rs  themis.rs  utils.rs  zenless.rs
src/scraper/: mod.rs
src/scraper/sources/: crimson_witch.rs  mod.rs
src/scraper/sources/genshin/: fandom.rs  game8.rs  hoyolab.rs  mod.rs
src/scraper/sources/honkai/: fandom.rs  mod.rs
src/scraper/sources/starrail/: fandom.rs  game8.rs  hoyolab.rs  mod.rs  sportskeeda.rs
src/scraper/sources/themis/: mod.rs  tot_wiki.rs
src/scraper/sources/zenless/: fandom.rs  game8.rs  hoyolab.rs  mod.rs
src/services/: code_validator.rs  code_verification.rs  mod.rs  webhook.rs
src/services/validation/: mod.rs
src/types/: calendar.rs  codes.rs  genshin.rs  hoyolab.rs  mod.rs  news.rs  starrail.rs
src/utils/: datetime.rs  generate_ds.rs  lang.rs  mod.rs
src/validator/: hoyoverse_api.rs  mod.rs
tools/: bun.lockb  index.ts  package.json
tools/services/: database.ts  scraper.ts
tools/types/: event.ts
